# apm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  pyproject.toml  state.json
.apm/skills/cut-release/: SKILL.md
.apm/skills/cut-release/assets/: entry-sanitizer.md  pr-body-template.md
.codex/: config.toml.example
.github/workflows/: ci.yml  pr-review-panel.lock.yml  triage-panel.lock.yml
scripts/: test-integration.sh
src/apm_cli/adapters/client/: _codex_env.py  _vscode_format.py  codex.py  cursor.py  vscode.py
src/apm_cli/bundle/: packer.py  packer_helpers.py  unpacker.py  unpacker_helpers.py
src/apm_cli/bundle/plugin_exporter/: __init__.py  collectors.py  exporter.py  hooks_mcp.py  utils.py
src/apm_cli/cache/: _git_helpers.py  git_cache.py
src/apm_cli/commands/: _helpers.py  _helpers_init.py  _mcp_show.py  _outdated_runner.py  audit.py  audit_content.py  audit_sections.py  config.py  init.py  init_helpers.py  install.py  list_cmd.py  mcp.py  outdated.py  pack.py  pack_helpers.py  prune.py  prune_helpers.py  runtime.py  update.py  update_helpers.py
src/apm_cli/commands/audit_content/: __init__.py  ci_gate.py  content_scan.py
src/apm_cli/commands/compile/: _display.py  _target.py  cli.py  watcher.py
src/apm_cli/commands/install/: __init__.py  _command_context.py  _local_bundle_router.py  argv_split.py  cli.py  install_impl.py  manifest_ops.py  mcp_flow.py  pipeline.py  pipeline_helpers.py  summary.py
src/apm_cli/commands/marketplace/: __init__.py  _add_helpers.py  _build_render.py  _check.py  _consumer_cmds.py  _doctor.py  _io.py  _outdated.py  _publish_helpers.py  doctor.py  doctor_checks.py  publish.py  publish_flow.py
src/apm_cli/commands/uninstall/: cli.py  engine.py  flow.py
src/apm_cli/compilation/: _dc_content.py  _dc_models.py  _dc_orphans.py  _link_asset_rewrite.py  _link_legacy.py  distributed_compiler.py  link_resolver.py
src/apm_cli/compilation/agents_compiler/: __init__.py  class_.py  class_compile.py  claude_gemini.py  copilot_root.py  display.py  output.py
src/apm_cli/compilation/context_optimizer/: __init__.py  _matching.py  _traversal.py  analysis.py  class_.py  glob_cache.py  placement.py  timing.py
src/apm_cli/core/: _target_compile.py  _target_resolve.py  _target_types.py  apm_yml.py  command_logger.py  target_detection.py
src/apm_cli/core/auth/: __init__.py  class_.py  classify.py  errors.py  fallback.py  tokens.py
src/apm_cli/core/command_logger/: __init__.py  _messages.py  _types.py
src/apm_cli/core/script_runner/: __init__.py  _command_builders.py  class_.py  prompt_compiler.py  prompts.py  runtime.py
src/apm_cli/install/: _drift_diff.py  _drift_render.py  _drift_types.py  _phase_runner.py  _preflight.py  drift.py  local_bundle_handler.py  package_resolution.py  pipeline.py  plan.py  skill_path_migration.py
src/apm_cli/install/heals/: branch_ref_drift.py
src/apm_cli/install/mcp/: command.py
src/apm_cli/install/phases/: _cowork_caps.py  _lockfile_check.py  _root_project.py  integrate.py  policy_target_check.py  targets.py
src/apm_cli/install/presentation/: dry_run.py
src/apm_cli/install/services/: __init__.py  deployed_path.py  local_bundle.py  primitives.py
src/apm_cli/install/sources/: __init__.py  _base.py  _cached.py  _fresh.py  _local.py
src/apm_cli/install/validation/: __init__.py  _git_ls_remote.py  local_path.py  tls.py
src/apm_cli/integration/: _agent_legacy.py  _agent_writers.py  _file_ops.py  _models.py  _partition.py  _sync.py  agent_integrator.py  base_integrator.py  copilot_cowork_paths.py  target_runtime.py  targets.py
src/apm_cli/integration/command_integrator/: __init__.py  _input_helpers.py  _integrator.py  _legacy.py  _transform.py
src/apm_cli/integration/hook_integrator/: __init__.py  class_.py  filter_files.py  gemini_translate.py  merge_config.py
src/apm_cli/integration/mcp_integrator/: __init__.py  class_.py  cleanup.py  collect.py  install_delegate.py  lockfile_sync.py  overlay.py  runtime_dispatch.py
src/apm_cli/integration/mcp_integrator_install/: __init__.py  opts.py  run.py  runtime_resolve.py
src/apm_cli/integration/skill_integrator/: __init__.py  class_.py  discovery.py  integrate_bundle.py  integrate_native.py  naming.py  native.py  opts.py  promote.py  promotion.py  sync.py  typing_helpers.py
src/apm_cli/marketplace/: _resolver_host_utils.py  _resolver_models.py  _resolver_source.py  _target_executor.py  builder.py  output_mappers.py  process_target.py  publisher.py  resolver.py  semver.py  upstream_resolver.py  yml_editor.py
src/apm_cli/models/: apm_package.py
src/apm_cli/models/validation/: _types.py  (+3 more)
src/apm_cli/output/: format_metrics.py  format_sections.py  formatters.py
src/apm_cli/policy/: _drift_check.py  _integrity_check.py  ci_checks.py  parser.py
src/apm_cli/primitives/: _dependency_order.py  discovery.py
src/apm_cli/registry/: _helpers.py  _http.py  client.py  operations.py
src/apm_cli/release/: __init__.py  git_tagger.py
src/apm_cli/runtime/: manager.py
src/apm_cli/utils/: _ado_utils.py  _artifactory_utils.py  exclude.py  git_subprocess.py  github_host.py  install_tui.py
tests/: test_enhanced_discovery.py
tests/integration/: test_golden_scenario_e2e.py  test_install_local_bundle_e2e.py  test_mcp_registry_e2e.py  test_policy_install_e2e.py  test_update_e2e.py
tests/integration/marketplace/: test_upstream_build_integration.py
tests/integration/release/: test_pack_tagging_e2e.py
tests/unit/: test_init_command.py  test_install_command.py  test_plugin_exporter.py  test_runtime_factory.py  test_view_command.py
tests/unit/commands/: conftest.py  test_pack_tagging.py  test_update_command.py
tests/unit/compilation/: test_context_optimizer.py
tests/unit/install/: test_architecture_invariants.py  test_install_local_bundle.py  test_policy_target_check_phase.py
tests/unit/integration/: test_base_integrator.py  test_skill_integrator.py
tests/unit/marketplace/: test_builder_json.py  test_builder_upstream_integration.py  test_lockfile_upstreams.py  test_upstream_resolver.py
tests/unit/release/: conftest.py  test_git_tagger.py
(+76 files in other folders)
